# kastio

./: .gitignore  compose.yml
api/: .env  Cargo.toml  Dockerfile
api/migrations/00000000000000_diesel_initial_setup/: up.sql
api/migrations/2023-04-11-181010_create_users/: up.sql
api/src/: main.rs  schema.rs
api/src/db/: mod.rs
api/src/handlers/: authentication.rs
api/src/middleware/: auth_middleware.rs
api/src/models/: auth.rs  users.rs
react/: .env.development  Dockerfile  package.json
react/src/: api.ts
react/src/app/: layout.tsx
react/src/app/login/: LoginForm.tsx  actions.ts  layout.tsx  page.tsx
react/src/app/login/new/: RegisterForm.tsx  page.tsx
react/src/app/me/: layout.tsx  page.tsx
react/src/components/: Button.tsx  Input.tsx  Popover.tsx  colors.ts  types.ts
react/src/components/nav/: Logo.tsx  UserIcon.tsx  UserMenu.tsx  UserPopover.tsx  index.tsx
react/src/hooks/: useClassNames.ts
