[package]
name = "kastio-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
dotenvy = "0.15"
jsonwebtoken = "7.2.0"
chrono = {version = "0.4.24", features = ["serde"]}
diesel_migrations = { version = "2.0.0", features = ["postgres"]}
r2d2 = "0.8.10"
argon2 = "0.5.0"
env_logger = "0.10.0"
log = "0.4.17"

